# vscode

./: download_img.py
C_Cpoints/: CMakeLists.txt
C_Cpoints/Chapter17/: CMakeLists.txt  d_stack.c  d_stack.h
Label_Image/: README.md  push_LE_LU.sh  push_android.sh
TurboX-AIStack/: Dockerfile  test
aistack/: turbox-aistack-setup.sh  turbox-sdkmanager-setup.sh
aistack/yolov5/: .benchmark_yolov5.dlc.swp  .benchmark_yolov5.sh.swp  benchmark_yolov5.sh  target_list.txt
aistack/yolov5/scripts/: udo_setup_functions.py
systemc/: Dockerfile
untitled/: CMakeLists.txt
untitled1/: CMakeLists.txt
